[gd_scene load_steps=7 format=3 uid="uid://cp7xv5f6y8q6j"]

[ext_resource type="Script" path="res://script s/payer.gd" id="1_2pqbl"]
[ext_resource type="Texture2D" uid="uid://chlhh30l03bo1" path="res://asset s/body d1.png" id="2_l7l4x"]
[ext_resource type="Texture2D" uid="uid://cwtw3c2e1ke43" path="res://asset s/arm d1.png" id="3_ekrhd"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_15r44"]
radius = 5.9
height = 21.9176

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k0afw"]
size = Vector2(15.2288, 17.1493)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r40fe"]
size = Vector2(4.705, 27.875)

[node name="paye" type="CharacterBody2D"]
collision_layer = 849
floor_stop_on_slope = false
floor_max_angle = 1.52367
floor_snap_length = 2.0
safe_margin = 0.5
script = ExtResource("1_2pqbl")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0.5, -0.5)
scale = Vector2(0.006, 0.006)

[node name="body" type="TextureRect" parent="Sprite2D"]
offset_left = -600.0
offset_top = -800.0
offset_right = 492.0
offset_bottom = 1120.0
texture = ExtResource("2_l7l4x")

[node name="arml" type="TextureRect" parent="Sprite2D"]
offset_left = 350.0
offset_top = 83.333
offset_right = 666.0
offset_bottom = 916.333
rotation = -0.244346
pivot_offset = Vector2(225, 100)
texture = ExtResource("3_ekrhd")

[node name="armr" type="TextureRect" parent="Sprite2D"]
offset_left = -930.0
offset_top = 83.333
offset_right = -614.0
offset_bottom = 916.333
rotation = -0.244346
pivot_offset = Vector2(225, 100)
texture = ExtResource("3_ekrhd")

[node name="speedycatframes" type="Timer" parent="."]
process_callback = 0
wait_time = 0.12
one_shot = true

[node name="CollisionShape2D3" type="CollisionShape2D" parent="."]
position = Vector2(0.2, 0.5206)
scale = Vector2(0.5, 0.5)
shape = SubResource("CapsuleShape2D_15r44")

[node name="checker" type="Area2D" parent="."]
z_index = 1
scale = Vector2(0.368, 0.928)
disable_mode = 2
collision_layer = 0
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="checker"]
position = Vector2(0.513299, 0.162928)
scale = Vector2(1, 0.997)
shape = SubResource("RectangleShape2D_k0afw")

[node name="buffer" type="Area2D" parent="."]
scale = Vector2(0.6, 1)
collision_priority = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="buffer"]
physics_interpolation_mode = 2
position = Vector2(0.3525, 11.0625)
shape = SubResource("RectangleShape2D_r40fe")
one_way_collision_margin = 0.0

[node name="deadth" type="Area2D" parent="."]
collision_mask = 8
collision_priority = 3.0

[node name="CollisionShape2D2" type="CollisionShape2D" parent="deadth"]
position = Vector2(0.2, 0.5206)
scale = Vector2(0.5, 0.5)
shape = SubResource("CapsuleShape2D_15r44")

[node name="deadtime" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="body_entered" from="checker" to="." method="_on_checker_body_entered"]
[connection signal="body_exited" from="checker" to="." method="_on_checker_body_exited"]
[connection signal="body_entered" from="buffer" to="." method="_on_flip_body_entered"]
[connection signal="body_exited" from="buffer" to="." method="_on_buffer_body_exited"]
[connection signal="body_entered" from="deadth" to="." method="_on_deadth_body_entered"]
[connection signal="timeout" from="deadtime" to="." method="_on_deadtime_timeout"]
